--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -13,6 +13,7 @@
     --color-input: #000000;
 
     --color-outline: #1a2c7d;
+    --color-background: #ffffff;
 
     /* adapted from https://loading.io/color/feature/Spectral-10/ */
     --color-cable-0: #9e0142;
