midi, saving, preview

--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -14,6 +14,7 @@
 
     --color-outline: #1a2c7d;
     --color-background: #ffffff;
+    --color-switch-bg: #dedede;
 
     /* adapted from https://loading.io/color/feature/Spectral-10/ */
     --color-cable-0: #9e0142;
