--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -13,8 +13,10 @@
     --color-input: #000000;
 
     --color-outline: #1a2c7d;
+    --color-outline-faded: rgba(26, 44, 125, 0.1);
     --color-background: #ffffff;
     --color-switch-bg: #dedede;
+    --color-inner-jack: #dedede;
 
     /* adapted from https://loading.io/color/feature/Spectral-10/ */
     --color-cable-0: #9e0142;
