--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,12 @@
 .App {
   text-align: center;
   position: relative;
+  overflow: hidden;
+  height: 100vh;
 }
 
 .App > svg {
-  height: 700px;
+  height: 100%;
 }
 
 .App-logo {
