--- a/src/styles/modal.css
+++ b/src/styles/modal.css
@@ -30,6 +30,13 @@
     z-index: 1;
 }
 
+.modal-container .modal.small {
+    width: 80%;
+    height: 80%;
+    max-height: 12rem;
+    max-width: 35rem;
+}
+
 .modal .modal-title-container {
     position: relative;
     border-bottom: solid 2px var(--color-outline);
@@ -129,6 +136,13 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    color: var(--color-outline);
+    font-size: 24px;
+}
+
+.modal-text-content {
+    padding: 0.5rem;
+    text-align: left;
     color: var(--color-outline);
     font-size: 24px;
 }
