--- a/src/styles/modal.css
+++ b/src/styles/modal.css
@@ -86,8 +86,9 @@
 }
 
 .modal-field {
-    display: flex;
-    flex-direction: row;
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    text-align: left;
     align-items: center;
     padding: 1rem 1rem;
 }
